metadata-sfdx/force-app/main/default/objects/SCConfigDisputeMessages__c/SCConfigDisputeMessages__c.object-meta.xml
<CustomObject>
    <description>Custom Object for Solution Center to capture 'Questions', 'Answers', from a Pro or Customer on a 'Resolution' related to a 'Dispute'.  Also captures 'Thumbtack Tips' sent to a pro or customer from Thumbtack.</description>
    <label>Dispute Message</label>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dispute Messages</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>