metadata-sfdx/force-app/main/default/objects/SCConfigDisputeMessages__c/fields/DisputeOffer__c.field-meta.xml
<CustomField>
    <fullName>DisputeOffer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dispute Offer</label>
    <referenceTo>SCConfigDisputeOffer__c</referenceTo>
    <relationshipLabel>Dispute Messages</relationshipLabel>
    <relationshipName>DisputeMessages</relationshipName>
    <type>Lookup</type>
</CustomField>