metadata-sfdx/force-app/main/default/objects/SCConfigDisputeMessages__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>