metadata-sfdx/force-app/main/default/objects/SCConfigDisputeMessages__c/fields/RespondingContact__c.field-meta.xml
<CustomField>
    <fullName>RespondingContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responding Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Dispute Messages</relationshipLabel>
    <relationshipName>DisputeMessages</relationshipName>
    <type>Lookup</type>
</CustomField>