metadata-sfdx/force-app/main/default/objects/SCConfigDisputeMessages__c/recordTypes/Message.recordType-meta.xml
<RecordType>
    <fullName>Message</fullName>
    <active>true</active>
    <description>Record type used to manage the messages between solution center parties.</description>
    <label>Message</label>
</RecordType>