metadata-sfdx/force-app/main/default/objects/SCConfigDisputeMessages__c/recordTypes/ReportedIssue.recordType-meta.xml
<RecordType>
    <fullName>ReportedIssue</fullName>
    <active>true</active>
    <description>Record type used to manage the issues reported through the Solution Center.</description>
    <label>Reported Issue</label>
</RecordType>