metadata-sfdx/force-app/main/default/objects/SCConfigDisputeMessages__c/recordTypes/ThumbtackMessage.recordType-meta.xml
<RecordType>
    <fullName>ThumbtackMessage</fullName>
    <active>true</active>
    <description>Record type used to manage the messages sent to a pro or customer from Thumbtack.</description>
    <label>Thumbtack Message</label>
</RecordType>